# quark

./: ..html  .cursorignore  .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .quarkrules  .ruff.toml  CONTRIBUTING_REORG.md  DATA_SYNC_GUIDE.md  Dockerfile  LICENSE  Makefile  QUARK_STATE_SYSTEM.py  README.md  authenticate_now.sh  brain_manifest.json  brain_specification.json  embodied_brain_simulation.py  gcs_sync_google_cloud_service.sh  pyproject.toml  pytest.ini  quark_state_system_launcher.py  repo_index.json  requirements-ci.txt  requirements.txt  run_brain_simulation.py  todo.py
audit_outputs/: mapping_bucket_A.csv  mapping_bucket_B.csv  mapping_bucket_C.csv
backups/: README.md
brain/: README.md  STABLE_CONFIG.md  __init__.py  _bootstrap.py  brain_main.py  gcp_training_manager.py  validate_stable_config.py
brain_architecture/: BRAIN_DEVELOPMENT_SUMMARY.md  README.md  TASK_STATUS.md  __init__.py
brain_modules/: biological_pruning_system.py  fast_duplicate_detector.py  integrated_pruning_system.py  optimized_pruning_system.py  redundancy_detector.py
brain_simulation/: main.py
config/: README.md
data_knowledge/: README.md
docs/: ACADEMIC_MCP_INTEGRATION.md  ANTI_OVERCONFIDENCE_GUIDE.md  API_KEY_PRE_PUSH_GUIDE.md  BALSA_TRAINING_README.md  BIOLOGICAL_CONSISTENCY_VALIDATION_REPORT.md  CLOUD_STORAGE_SPEED_COMPARISON.md  CLOUD_STORAGE_STRATEGY.md  COMPREHENSIVE_VALIDATION_REFERENCE.md  CONTINUOUS_MODE.md  DATA_SYNC_GUIDE.md  DBRX_CLOUD_INTEGRATION_GUIDE.md  DBRX_INTEGRATION_GUIDE.md  DNA_CONTROLLER_README.md  DRUG_DISCOVERY_TRAINING_README.md  E8_KALEIDESCOPE_INTEGRATION.md  ENHANCED_ROADMAP_IMPLEMENTATION.md  FOUNDATION_LAYER_TASK_2_3_3_VALIDATION.md  FULL_WIKIPEDIA_IMPLEMENTATION_SUMMARY.md  FULL_WIKIPEDIA_TRAINING_GUIDE.md  GCP_QUOTA_ERROR.md  GCP_QUOTA_REQUIREMENTS.md  GCP_TRAINING_GUIDE.md  GCP_TRAINING_ROADBLOCK.md  GCP_TRAINING_SUCCESS_SUMMARY.md  GOOGLE_CLOUD_PROGRAMMATIC_ANALYSIS.md  IMPORT_UPDATE_REPORT.md  INDEX.md  INVALID_TRAINING_REPORT.md  KNOWLEDGE_BASE_INTEGRATION.md  LLAMA2_BRAIN_INTEGRATION.md  NEMOTRON_INTEGRATION_GUIDE.md  OPENROUTER_INTEGRATION_GUIDE.md  PRODUCTION_VALIDATION_GUIDE.md  README.md  REQUEST_VERTEX_AI_QUOTA.md  RESOURCE_MANAGER_GUIDE.md  RESOURCE_MONITOR_SETUP.md  RULES_ORGANIZATION_SUMMARY.md  SCIENTIFIC_ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  STARTUP_GUIDE_1.md  (+17 more)
gym/: __init__.py
integration/: README.md
logs/: .gitignore  ca3_sweep_status.json
management/: README.md
management/configurations/project/: .gitignore  MANIFEST.in  README.md  agi_enhanced_connectome.yaml  arbor_deployment.yaml  autonomous_editing_safety.yaml  aws_deployment_config.yaml  aws_optimization_config.yaml  azure-pipelines_2.yml  brian2cuda_config.yaml  build_visit_tpls_2.yaml  cloud_cognitive_skypilot.yaml  cloud_training_config_2.yaml  connectome.yaml  connectome_v2.yaml  connectome_v3.yaml  cpu_optimized_config.yaml  cpu_optimized_fixed.yaml  current_directory_structure.yaml  finetune_config.yaml  local_test_config.yaml  ml_agent_config.yaml  models.yaml  neuron_coreneuron_config.yaml  pyproject.toml  ray_serve_config.yaml  roadmap_task_format.yaml  skypilot.yaml  skypilot_deployment.yaml  skypilot_smoketest.yaml  tracking.yaml  training_config.yaml  training_pipeline.yaml  tvb_config.yaml  wikipedia-training-deployment.yaml  wikipedia_training_deployment.yaml  wolfram_config.yaml  workspace_organization.yaml
management/configurations/project/grafana_dashboards/: README.md
ml/: __init__.py  _bootstrap.py
ml_architecture/: README.md
optimization/: cursor_optimization_guide.md  quick_setup.sh  system_optimizer.py
quark_state_system/: QUARK_CURRENT_TASKS.md  QUARK_STATE.md  QUARK_STATE_ORGANIZATION.md  autonomous_agent.py  check_quark_state.py  data_migration_manager.py  prompt_guardian.py  quantum_config.json  quantum_decision_engine.py  quantum_router.py  quark_driver.py  quark_quantum_integration.py  quark_recommendations.py  roadmap_controller.py  s3_config.json  s3_model_manager.py  s3_streaming_manager.py  setup_tokyo_instance.sh  sync_quark_state.py
repo_indexes/: repo_index_20250830.json
(+26281 files in other folders)
