[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quark"
version = "0.0.0"
authors = [ {name = "Quark Team"} ]
description = "Quark neuroscience / ML framework"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["brain.architecture", "ml.architecture", "state.quark_state_system", "utilities.tools_utilities"]

[tool.setuptools.package-dir]
"" = "."
