[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quark"
version = "0.1.0"
description = "A newborn cognitive brain simulation framework with biologically-grounded neural architectures"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Quark Brain Team", email = "team@quarkbrain.ai"}
]
maintainers = [
    {name = "Quark Brain Team", email = "team@quarkbrain.ai"}
]
keywords = ["brain", "simulation", "cognitive", "AI", "neuroscience", "neural networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Neuroscience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
quark-brain = "main:run_brain_simulation_wrapper"
quark-sim = "main:run_brain_simulation_wrapper"

[project.urls]
Homepage = "https://github.com/quarkbrain/quark-simulation"
Documentation = "https://quarkbrain.ai/docs"
Repository = "https://github.com/quarkbrain/quark-simulation"
"Bug Tracker" = "https://github.com/quarkbrain/quark-simulation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"config" = ["*.yaml"]
"core" = ["*.py"]
